# GameLib

./: .clang-format  .gitignore  Anim.c  Anim.h  Audio.c  Audio.h  CMakeLists.txt  Draw.c  Draw.h  DrawGL.c  DrawSDL.c  Entity.c  Entity.h  FontData.h  GameEnts.c  GameEnts.h  GameLib.c  GameLib.h  GameMap.c  GameMap.h  Input.c  Input.h  LICENSE.txt  Makefile  Makefile.common  Makefile.common.mk  Makefile.emscripten  Makefile.emscripten.mk  Makefile.linux  Makefile.macosx  Makefile.mingw  Makefile.old  Makefile.win32  NOTES.txt  Time.c  Time.h  Util.c  Util.h  a.out  conv.c  (+10 more)
Example.GameLib/: .gitignore  CMakeLists.txt  Makefile  Makefile.common.mk  Makefile.emscripten.mk  Makefile.old  dev-server.sh  dist-emscripten.cmd  dist-emscripten.sh
Example.GameLib/data/: level_01.txt
Example.GameLib/macosx/: SDLMain.m
Example.GameLib/src/: GameEnts.c  GameEnts.h  GameMap.c  GameMap.h  main.c
Example.GameLib/web/: index.html
Game/: GameEnts.c  GameEnts.h  GameMap.c  GameMap.h  main.c
GameLib/: Anim.c  Anim.h  Audio.c  Audio.h  Draw.c  Draw.h  Entity.c  Entity.h  GameLib.c  GameLib.h  Input.c  Input.h  QuadArray2D.c  QuadArray2D.h  Time.c  Time.h  Util.c  Util.h
cmake/: FindSDL2.cmake
data/: Explosion16.bfxrsound  Hit_Hurt10.bfxrsound  arrow_down.xcf  arrow_right.xcf  arrow_up.xcf  arrowshooter_left.xcf  arrowshooter_right.xcf  barrel.xcf  carnivoreplant_left.xcf  column.xcf  end.xcf  exit_point.xcf  floor.xcf  floor_center.xcf  floor_left.xcf  floor_right.xcf  lamp.xcf  level_00.txt  level_01.txt  level_02.txt  level_03 - copia.txt  level_03.txt  level_04.txt  level_05.txt  level_06.txt  magikball.xcf  player.xcf  player_broken.xcf  player_right.xcf  player_up.xcf  rock.xcf  save_point.xcf  spider_right.xcf  spikedbush.xcf  wizard_right.xcf
data-orig/: Explosion2.bfxrsound  Hit_Hurt16.bfxrsound  Laser_Shoot2.bfxrsound  Powerup10.bfxrsound  Powerup30.bfxrsound  arrow_left.xcf  arrowshooter_down.xcf  arrowshooter_up.xcf  barrel2.xcf  bunny_left.xcf  column.xcf  end_point.xcf  fire.xcf  floor.xcf  floor_left.xcf  hole_lava.xcf  hole_spiked.xcf  logo.xcf  player_down.xcf  save_point_active.xcf
data-orig/earth/: tierra01.xcf  tierra02.xcf  tierra04.xcf  tierra05.xcf  tierra05Ext.xcf
data/earth/: tierra03.xcf
data/maps.copy/: level_00.txt  level_03.txt  level_04.txt  level_05.txt  level_06.txt
macosx/: SDLMain.m
src/: Anim.c  Anim.h  Audio.c  Audio.h  Draw.c  Draw.h  Entity.c  Entity.h  FontData.h  GameLib.c  GameLib.h  Input.c  Input.h  QuadArray2D.c  QuadArray2D.h  Time.c  TimeUtils.c  TimeUtils.h  Util.c  Util.h  lodepng.c  lodepng.h
web/: index.html  play.html  playEmbbed.html  style.css
